fix: resume render on mobile

--- a/assets/css/pdf.css
+++ b/assets/css/pdf.css
@@ -16,7 +16,6 @@
     padding: 12px 24px;
     text-decoration: none;
     border-radius: 5px;
-    font-weight: bold;
     display: inline-block;
 }
 
